# tv-rename

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
tv_rename/: __main__.py  multipart.py  unmangle.py  util.py
