[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "tv-rename"
version = "0.0.1"
dependencies = ["rich", "tvdb-v4-official"]
requires-python = ">=3.13"
authors = [{name = "Fastily", email = "fastily@users.noreply.github.com"}]
description = "Utility for batch renaming mangled season dirs and/or episode names"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E.*"]
keywords = []
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/fastily/tv-rename"
"Bug Tracker" = "https://github.com/fastily/tv-rename/issues"

[project.scripts]
tv_rename = "tv_rename.__main__:_main"
multipart_episodes = "tv_rename.multipart:_main"
unmangle_episodes = "tv_rename.unmangle:_main"

[tool.uv.build-backend]
module-name = "tv_rename"
module-root = ""